--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,12 @@
     <!-- Profile view -->
     <string name="Show_Email">Email:</string>
     <string name="Show_Username">Username:</string>
+    <string name="routes_no_info">routes_no_info</string>
+    <string name="start_route">start_route</string>
+    <string name="routeItem_no_user">routeItem_no_user</string>
+    <string name="routeItem_no_description">RouteItem_No_Description</string>
+    <string name="routes_no_title">routes_no_title</string>
+    <string name="routes_fetching_error">routes_fetching_erros</string>
+    <string name="retry">retryu</string>
 
 </resources>
